--- a/libs/quotes/page/src/lib/quotes-page/quotes-page.component.html
+++ b/libs/quotes/page/src/lib/quotes-page/quotes-page.component.html
@@ -1,1 +1,10 @@
-<p>quotes-page works!</p>
+<h2>Quotes</h2>
+
+<div *ngFor="let quote of quotes$ | async">
+  <div>
+    {{ quote.quote }}
+  </div>
+  <div>Author: {{ quote.author }}</div>
+  <div>Season {{ quote.season }} Episode {{ quote.episode }}</div>
+  <br />
+</div>
